FIX: wishlist page product card modal variant picker fixed alignment

--- a/assets/output.css
+++ b/assets/output.css
@@ -644,6 +644,9 @@
   .x\:h-0\.5 {
     height: calc(var(--x-spacing) * 0.5) !important;
   }
+  .x\:h-5 {
+    height: calc(var(--x-spacing) * 5) !important;
+  }
   .x\:h-6 {
     height: calc(var(--x-spacing) * 6) !important;
   }
@@ -716,6 +719,9 @@
   .x\:w-0 {
     width: calc(var(--x-spacing) * 0) !important;
   }
+  .x\:w-5 {
+    width: calc(var(--x-spacing) * 5) !important;
+  }
   .x\:w-6 {
     width: calc(var(--x-spacing) * 6) !important;
   }
@@ -752,6 +758,9 @@
   .x\:w-\[32rem\] {
     width: 32rem !important;
   }
+  .x\:w-\[35rem\] {
+    width: 35rem !important;
+  }
   .x\:w-\[50rem\] {
     width: 50rem !important;
   }
@@ -769,9 +778,6 @@
   }
   .x\:w-\[350px\] {
     width: 350px !important;
-  }
-  .x\:w-\[35rem\] {
-    width: 35rem !important;
   }
   .x\:w-\[calc\(33\.333\%-1\.5rem\)\] {
     width: calc(33.333% - 1.5rem) !important;
